<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="40dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="wa"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:maxWidth="488dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="40dp"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_meeting_title"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/magic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magic"
            android:contentDescription="@string/emoji_magic"
            android:textSize="36sp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!--Roll up to choose a room-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/choose_room"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:maxWidth="480dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/magic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            >

            <AutoCompleteTextView
                android:id="@+id/choose_roomTextV"
                android:hint="@string/hint_room"
                android:layout_width="match_parent"
                android:maxWidth="480dp"
                android:layout_height="match_parent"
                android:inputType="none"
                android:singleLine="true"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/magic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/choose_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/choose_room"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!--Date picker-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/date_picker_lyt"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_date"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            app:startIconDrawable="@drawable/ic_calendar_black"
            app:layout_constraintTop_toBottomOf="@+id/choose_text"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/datepicker"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Time picker-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/time_picker_lyt"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_time"
            android:layout_marginEnd="20dp"
            app:startIconDrawable="@drawable/ic_hour_black"
            app:layout_constraintTop_toTopOf="@+id/date_picker_lyt"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timepicker"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Subject input-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/choose_subject"
            android:layout_width="0dp"
            android:maxWidth="480dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/hint_subject"
            android:maxLines="1"
            android:textSize="16sp"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/date_picker_lyt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:maxWidth="480dp"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Participants input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/participants_lyt"
            android:layout_width="0dp"
            android:maxWidth="488dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/hint_participants"
            android:maxLines="1"
            android:textSize="16sp"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/choose_subject"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_email_participant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/participants_textInput"
                android:layout_width="match_parent"
                android:maxWidth="488dp"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button to add an Email -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/add_email_participant"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            android:background="@color/blue"
            android:src="@drawable/ic_add_white"
            android:contentDescription="@string/button_add_email"
            app:layout_constraintBottom_toBottomOf="@id/participants_lyt"
            app:layout_constraintStart_toEndOf="@id/participants_lyt"
            app:layout_constraintTop_toTopOf="@id/participants_lyt"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- ChipGroup -->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/participants_lyt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </com.google.android.material.chip.ChipGroup>

        <!--Submit button-->
        <Button
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_marginTop="32dp"
            android:theme="@style/ThemeOverlay.Button.Red"
            android:padding="20dp"
            android:text="@string/creation"
            android:textSize="20sp"
            android:contentDescription="@string/button_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>