<resources>
    <string name="app_name">MaReu</string>

    <string name="content_description_itemImg">colors circle matching the room of the meeting</string>
    <string name="delete_img">delete meeting</string>
    <string name="between">-</string>
    <string name="descriptionFab">add new meeting</string>

    <!--Strings for create activity-->
    <string name="create_meeting_title">Créez votre réunion ! </string>
    <string name="magic">🪄</string>
    <string name="hint_room">Choisissez la salle</string>
    <string name="choose">Choisissez : </string>
    <string name="hint_date">La date</string>
    <string name="hint_time">L\'heure</string>
    <string name="time_picker_text">Chosissez l\'heure de la réunion</string>
    <string name="hint_subject">Le sujet de la réunion</string>
    <string name="hint_participants">Les participants</string>
    <string name="creation">Création ✨</string>
    <string name="error_email">Email invalide !</string>

    <!--Strings for menu filter -->
    <string name="filter_date">📅 Filtrer par date</string>
    <string name="filter_room">📍 Filtrer par lieu</string>
    <string name="filter_return">🔎 Toutes les réunions</string>
    <string name="choose_room_menu">☝🏻 Choisissez le lieu :</string>
    <string name="no_meeting_founded">⚠️Aucunes réunions correspondantes</string>

    <!-- String message for meeting list -->
    <string name="no_meeting"> Pas de réunion trouvée </string>
    <string name="emoji_magic">emoji baguette magique</string>
    <string name="button_add_email">bouton ajouter un email de participant</string>
    <string name="button_create">bouton pour créer une réunion</string>
</resources>
