<?xml version="1.0" encoding="utf-8"?>
<menu
    android:id="@+id/dropdown_menu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/filter_date"
        android:title="@string/filter_date"
        app:showAsAction="never" />

    <item android:id="@+id/filter_room"
        android:title="@string/filter_room"
        app:showAsAction="never" />

    <item android:id="@+id/filter_return"
        android:title="@string/filter_return"
        app:showAsAction="never" />
</menu>