<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <TextView
        android:id="@+id/no_meeting_founded"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="80dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        tools:text="NO MEETINGS FOUNDED"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_meetings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/meeting_item" />

    <!-- fab to create a meeting -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/fab_to_create"
        android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_add_white"
        app:tint="@null"
        android:contentDescription="@string/descriptionFab" />

</androidx.constraintlayout.widget.ConstraintLayout>