...
        app:layout_constraintStart_toEndOf="@id/image_meeting"
        app:layout_constraintEnd_toStartOf="@id/deleteBtn"
        tools:text="Reunion rechauffement climatique "/>


    <TextView
        android:id="@+id/date_meeting"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_gravity="center"
...

    <TextView
        android:id="@+id/between"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/time_meeting"
        app:layout_constraintEnd_toStartOf="@id/place_meeting"
        app:layout_constraintTop_toTopOf="@id/time_meeting"
        app:layout_constraintBottom_toBottomOf="@id/time_meeting"
        android:text="@string/between"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
...
